use gdal to read shape files. update scan

--- a/src/admin_upload/templates/upload.html
+++ b/src/admin_upload/templates/upload.html
@@ -12,19 +12,19 @@
     </div>
     <div class="form-group">
         <label>Database name </label>
-        <input type="text" id="database_name" name="database_name" class="form-control" required/>
+        <input type="text" id="database_name"  name="database_name" class="form-control" required/>
     </div>
     <div class="form-group">
         <label>Port </label>
-        <input type="text" id="database_port" name="database_port" class="form-control" required/>
+        <input type="text" id="database_port"  name="database_port" class="form-control" required/>
     </div>
     <div class="form-group">
         <label>Username </label>
-        <input type="text" id="database_user" name="database_user" class="form-control" required/>
+        <input type="text" id="database_user"  name="database_user" class="form-control" required/>
     </div>
     <div class="form-group">
         <label>Password </label>
-        <input type="password" id="database_psw" name="database_psw" class="form-control" required/>
+        <input type="password" id="database_psw"  name="database_psw" class="form-control" required/>
     </div>
     
     <div class="form-group">
@@ -44,7 +44,7 @@
 
     <div id="showTableData" style="display: none;">
         <label>Select Data to upload</label>
-        <div id="excel_data" class="mt-5" style="overflow-x: scroll;overflow-y: scroll;max-height: 500px;"></div>
+        <div id="excel_data" class="mt-5" style="overflow-x: scroll;overflow-y: scroll;"></div>
         <br>
         <div style="display: flex; flex-direction: row;">
             <div>
@@ -78,8 +78,11 @@
         The zip file could not be read. Mandatory parts of the shp do not exist
     </div>
     <br>
-    <button type="button" id ="scan" onclick="scanData()" class="btn btn-primary">Scan data</button>
-    <button type="button" id="submitFinal" onclick="submitData()" class="btn btn-primary" disabled>Submit</button>
+    <div style="display: flex; flex-direction: row;">
+        <button type="button" id ="upload_btn" onclick="upload_file()" style="display: none;" class="btn btn-primary" style="margin-right: 5px;">Upload file</button>
+        <button type="button" id ="scan" onclick="scanData()" class="btn btn-primary" style="margin-right: 5px;">Scan data</button>
+        <button type="button" id="submitFinal" onclick="submitData()" class="btn btn-primary" disabled>Submit</button>
+    </div>
 
 </form>
 {% endblock %}
@@ -94,8 +97,8 @@
 <script src="{% static 'js/fancytable.min.js' %}"></script>
 <!-- <script src="{% static 'js/main.js' %}"></script> -->
 <script>
-    let dataArr;
-let filetype;
+    let dataArr = [];
+    let filetype;
 
 function hide(){
     document.getElementById("modalData").style.display = "none"
@@ -123,12 +126,73 @@ function databaseConn(){
     var database_user = document.getElementById("database_user").value;
     var database_psw = document.getElementById("database_psw").value;
     var database_port = document.getElementById("database_port").value;
-    if(database_host == "" || database_name == "" || database_user == "" || database_psw == "" || database_port == ""){
+    if(database_host == "" || database_name == "" || database_user == "" || database_psw == ""){
         return false
     }
     else{
         return true
     }
+}
+
+function upload_file(){
+    var form_data = new FormData();
+    form_data.append('file', $('#excel_file')[0].files[0]);
+    $.ajax({
+        type: 'POST',
+        url: '/read_shapefile/',
+        data: form_data,
+        contentType: false,
+        cache: false,
+        enctype: 'multipart/form-data',
+        processData: false,
+        success: function(data) {
+            if(data["status"] == "finished"){
+                document.getElementById("scan").style.display = "block"
+                document.getElementById("upload_btn").style.display = "none"
+                console.log(typeof data["columns"])
+                const column_obj = JSON.parse(data["columns"])
+                const row_obj = JSON.parse(data["rows"])
+                dataArr.push(column_obj)
+                
+                var table_output = '<table id="show_table_zip" class="table table-striped table-bordered">';
+                table_output += "<tr>";
+                table_output += '<th>Upload Data</th>';
+                for(var i = 0; i < column_obj.length; i++){
+                    
+                   table_output += "<th>"+ column_obj[i] +"</th>";
+                }
+                table_output += "</tr>";
+                for(var row = 0; row < row_obj.length; row++){
+                    dataArr.push(row_obj[row])
+                    table_output += "<tr>";
+                    for(var item = 0; item < row_obj[row].length; item++){
+                        if(item == 0){
+                            var col_index = parseInt(row) + 1
+                            table_output += '<td>' + "<input type='checkbox' class='check' name='select_row_upload' value="+ col_index +" />" +'</td>';
+                        }
+                        table_output += '<td>' + row_obj[row][item]+'</td>';
+                    }
+                    table_output += "</tr>";
+                }
+
+                table_output += '</table>'
+
+                document.getElementById('excel_data').innerHTML = table_output;
+                document.getElementById("showTableData").style.display = "block";
+                console.log(dataArr)
+                $("#show_table_zip").fancyTable({
+                    sortColumn:0,
+                    pagination: true,
+                    perPage:5,
+                    globalSearch:false
+                });	
+            }
+            else{
+                document.getElementById("error_msg").innerHTML = "The esri file is missing some parts"
+                document.getElementById("error").style.display = "block"
+            }
+        },
+    });
 }
 
 function submitData(){
@@ -150,14 +214,7 @@ function submitData(){
         let dataSave = new Array();
         let dataHeaders;
 
-        if(filetype == "excel"){
-            dataHeaders = dataArr[0]
-        }
-        else{
-            dataHeaders = dataArr[dataArr.length - 1]
-        }
-
-        console.log(dataHeaders)
+        dataHeaders = dataArr[0]
 
         for(i = 0; i < checkedVals.length; i++){
             dataSave.push(dataArr[checkedVals[i]])
@@ -238,14 +295,7 @@ function scanData(){
         let dataSave = new Array();
         let dataHeaders;
 
-        if(filetype == "excel"){
-            dataHeaders = dataArr[0]
-        }
-        else{
-            dataHeaders = dataArr[dataArr.length - 1]
-        }
-
-        console.log(dataHeaders)
+        dataHeaders = dataArr[0]
 
         for(i = 0; i < checkedVals.length; i++){
             dataSave.push(dataArr[checkedVals[i]])
@@ -315,7 +365,12 @@ excel_file.addEventListener('change', (event) => {
 
     document.getElementById('wrong_format').style.display = "none";
     document.getElementById('zip_error').style.display = "none";
+    document.getElementById('zip_error').style.display = "none";
+    document.getElementById('finished').style.display = "none";
+    document.getElementById('finished_warning').style.display = "none";
     document.getElementById("error").style.display = "none"
+    document.getElementById('excel_data').innerHTML = "";
+    document.getElementById("submitFinal").disabled = true
 
     if(!['application/vnd.openxmlformats-officedocument.spreadsheetml.sheet', 'application/vnd.ms-excel', 'application/zip'].includes(event.target.files[0].type))
     {
@@ -324,6 +379,8 @@ excel_file.addEventListener('change', (event) => {
         return false;
     }
     else if(['application/vnd.openxmlformats-officedocument.spreadsheetml.sheet', 'application/vnd.ms-excel'].includes(event.target.files[0].type)){
+        document.getElementById("scan").style.display = "block"
+        document.getElementById("upload_btn").style.display = "none"
         filetype = "excel";
         dataArr = []
         var reader = new FileReader();
@@ -371,74 +428,12 @@ excel_file.addEventListener('change', (event) => {
                 });	
             }
         }
-        excel_file.value = '';
+        // excel_file.value = '';
     } 
     else if(['application/zip'].includes(event.target.files[0].type)){
         filetype = "zip";
-        var headers_arr = new Array()
-        dataArr = []
-        try{
-            loadshp({
-                url: event.target.files[0], // path or your upload file
-                encoding: 'big5', // default utf-8
-                EPSG: 3826 // default 4326
-            }, function(geojson) {
-                // geojson returned
-                console.log(geojson)
-                var table_output = '<table id="show_table_zip" class="table table-striped table-bordered">';
-                for (var key in geojson){
-                    for(var i = 0; i < geojson[key].length; i++){
-                        
-                        if(geojson[key][i]["properties"] != undefined){
-                            table_output += '<tr>' ;
-                            if(i > 0){
-                                table_output += '<td>' + "<input type='checkbox' class='check' name='select_row_upload' value="+i+" />" +'</td>';
-                            }
-                            else{
-                                table_output += '<th>Upload Data</th>';
-                            }
-                        }
-                        var feature = new Array()
-                        for(var x in geojson[key][i]["properties"]){
-                            if(geojson[key][i]["properties"] != undefined){
-                                if(i == 0){
-                                    headers_arr.push(x)
-                                    table_output += '<th>'+x+'</th>';
-                                }
-                                else{
-                                    table_output += '<td>'+geojson[key][i]["properties"][x]+'</td>';
-                                    feature.push(geojson[key][i]["properties"][x])
-                                }
-                            }
-                        }
-                        if(geojson[key][i]["properties"] != undefined){
-                            table_output += '</tr>' ;
-                        }
-                        
-                        if(feature.length != 0){
-                            dataArr.push(feature)
-                        }
-                        
-                    }
-                }
-                dataArr.push(headers_arr)
-                table_output += '</table>';
-                document.getElementById('excel_data').innerHTML = table_output;
-                document.getElementById("showTableData").style.display = "block";
-                console.log(dataArr)
-                $("#show_table_zip").fancyTable({
-                    sortColumn:0,
-                    pagination: true,
-                    perPage:5,
-                    globalSearch:false
-                });	
-            });
-        }
-        catch{
-            console.log("error")
-        }
-
-        excel_file.value = '';
+        document.getElementById("scan").style.display = "none"
+        document.getElementById("upload_btn").style.display = "block"
     }
     
 });
